--- a/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/Properties/Resources.resx
+++ b/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/Properties/Resources.resx
@@ -117,64 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="FetchXml_EnabledUsers" xml:space="preserve">
-    <value>&lt;fetch&gt;
-  &lt;entity name="systemuser" &gt;
-    &lt;all-attributes/&gt;
-    &lt;filter type="and" &gt;
-      &lt;condition attribute="isdisabled" operator="eq" value="0" /&gt;
-      &lt;condition attribute="accessmode" operator="eq" value="0" /&gt;
-    &lt;/filter&gt;
-  &lt;/entity&gt;
-&lt;/fetch&gt;</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Refresh.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="FetchXml_LastLoginCheck" xml:space="preserve">
-    <value>&lt;fetch count="1" &gt;
-  &lt;entity name="audit" &gt;
- &lt;attribute name="createdon"  /&gt;
-    &lt;filter&gt;
-      &lt;condition attribute="operation" operator="eq" value="4" /&gt;
-      &lt;condition attribute="objectid" operator="eq" value="{0}" /&gt;
-    &lt;/filter&gt;
-    &lt;order attribute="createdon" descending="true" /&gt;
-  &lt;/entity&gt;
-&lt;/fetch&gt;</value>
-  </data>
-  <data name="FetchXml_UserLogin" xml:space="preserve">
-    <value>&lt;fetch count="20" &gt;
-  &lt;entity name="audit" &gt;
-    &lt;all-attributes/&gt;
-    &lt;filter&gt;
-      &lt;condition attribute="operation" operator="eq" value="4" /&gt;
-      &lt;condition attribute="objectid" operator="eq" value="{0}" /&gt;
-    &lt;/filter&gt;
-    &lt;order attribute="createdon" descending="true" /&gt;
-  &lt;/entity&gt;
-&lt;/fetch&gt;</value>
-  </data>
-  <data name="FetchXml_UserTransactions" xml:space="preserve">
-    <value>&lt;fetch count="200" &gt;
-  &lt;entity name="audit" &gt;
-    &lt;all-attributes/&gt;
-    &lt;filter&gt;
-      &lt;condition attribute="operation" operator="neq" value="4" /&gt;
-      &lt;condition attribute="userid" operator="eq" value="{0}" /&gt;
-    &lt;/filter&gt;
-    &lt;order attribute="createdon" descending="true" /&gt;
-  &lt;/entity&gt;
-&lt;/fetch&gt;</value>
-  </data>
-  <data name="FetchXml_UserViews" xml:space="preserve">
-    <value>&lt;fetch&gt;
-  &lt;entity name="savedquery" &gt;
-    &lt;attribute name="name" /&gt;
-    &lt;attribute name="savedqueryid" /&gt;
-    &lt;attribute name="isdefault" /&gt;
-    &lt;filter type="and" &gt;
-      &lt;condition attribute="returnedtypecode" operator="eq" value="8" /&gt;
-      &lt;condition attribute="querytype" operator="eq" value="0" /&gt;
-    &lt;/filter&gt;
-  &lt;/entity&gt;
-&lt;/fetch&gt;</value>
+  <data name="Delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Delete.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
