--- a/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/Properties/Resources.resx
+++ b/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="Delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Delete.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="StepEnabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StepEnabled.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
