--- a/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/PluginControl.resx
+++ b/BDK.XrmToolBox/BDK.XrmToolBox.RecycleBin/PluginControl.resx
@@ -126,4 +126,7 @@
   <metadata name="auditItemBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
+  <metadata name="deletedFieldBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>532, 17</value>
+  </metadata>
 </root>
